# hpproj

./: .codeclimate.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE  LICENSE_short  README.md  README.rst  __init__.py  apps.py  config_pact.py  cross_match.py  cutsky.py  hp_helper.py  requirements.txt  rtd_requirements.txt  setup.cfg  setup.py  sonar-project.properties  views.py
.circleci/: config.yml
HealpixProjection/: cutsky.py
data/: CMB_I_SMICA_128_R2.00.fits  HFI_SkyMap_100_128_R2.00_RING.fits  HFI_SkyMap_857_128_R2.00_NESTED.fits  cutsky.cfg
hpproj/: __init__.py  cutsky.py  decorator.py  hp_helper.py  parse.py  visu.py  wcs_helper.py
hpproj/data/: CMB_I_SMICA_128_R2.00.fits  HFI_SkyMap_100_128_R2.00_RING.fits  HFI_SkyMap_857_128_R2.00_NESTED.fits  cutsky.cfg
hpproj/tests/: Dockerfile  test_cutsky.py  test_hp_helper.py  test_visu.py
hpproject/: __init__.py  cutsky.py
hpproject/tests/: test_cutsky.py~
templates/xmatch/: index.html  index.html~
tests/: Dockerfile  coveragerc  test_cutsky.py  test_hp_helper.py  test_parse.py  test_visu.py  test_wcs_helper.py
