[aliases]
test=pytest

[tool:pytest]
minversion = 2.3.3
addopts = --verbose --cov=hpproj --cov-config tests/coveragerc --cov-report=term --cov-report=xml:reports/coverage.xml --junit-xml=reports/tests.xml

[flake8]
#flake8-max-line-length = 200
# E501 line too long
# E402 module level import not at top of fil
ignore = E501
exclude = build,dist,docs,tests

## Run with: pylint --rcfile=setup.cfg hpproj
[pylint]
disable=line-too-long,fixme,no-member

[metadata]
description-file = README.rst

[bdist_wheel]
universal = 1
